<resources>
    <string name="app_name">Mobilization</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_my_agenda">My Agenda</string>
    <string name="title_activity_track">Track</string>
    <string name="title_activity_tracks">Tracks</string>
    <string name="title_activity_speakers">Speakers</string>
    <string name="title_activity_sponsors">Sponsors</string>
    <string name="title_activity_about">About App</string>
    <string name="title_activity_event">Event</string>

    <string name="navigation_my_agenda">My agenda</string>
    <string name="navigation_venues">Tracks</string>
    <string name="navigation_more">More</string>
    <string name="navigation_speakers">Speakers</string>
    <string name="navigation_sponsors">Sponsors</string>
    <string name="navigation_about">About</string>
    <string name="navigation_event">Event</string>

    <string name="info_card_title">Info</string>

    <string name="sponsor_type_diamond">DIAMOND SPONSOR</string>
    <string name="sponsor_type_platinum">PLATINUM SPONSOR</string>
    <string name="sponsor_type_gold">GOLD SPONSOR</string>
    <string name="sponsor_type_silver">SILVER SPONSOR</string>
    <string name="sponsor_type_copper">COPPER SPONSOR</string>
    <string name="sponsor_type_other">OTHER SPONSOR</string>

    <string name="talk_added_to_myagenda">Added to My Agenda</string>
    <string name="talk_removed_to_myagenda">Removed from My Agenda</string>
    <string name="talk_language_pl">Polish</string>
    <string name="talk_language_en">English</string>
    <string name="dialog_slot_conflict_title">Slot conflict</string>
    <string name="dialog_slot_conflict_message_part1">"You have another talk in the same slot:"</string>
    <string name="dialog_slot_conflict_message_part2">"Do you want to replace it?"</string>
    <string name="dialog_button_positive">Yes</string>
    <string name="dialog_button_negative">No</string>
    <string name="dialog_json_data_update">Agenda update</string>
    <string name="dialog_json_data_update_message_part1">There is a new version of an agenda available. Do you want to
        download it now?</string>
    <string name="dialog_json_data_update_message_part2">Note: this will delete your current agenda:(\nYou can
    do it later using sync button on \"Event\" tab.</string>
    <string name="text_empty_slot">Empty slot - browse sessions…</string>
    <string name="about_author_label">Author</string>
    <string name="about_author_name">Leszek Wach</string>
    <string name="my_twitter">\@leszekwach</string>
    <string name="my_github">lecho</string>
    <string name="about_version_label">"Version "</string>
    <string name="about_open_source_licences">Open Source Licences</string>
    <string name="speakers_prefix">By\u0020</string>
    <string name="website">website</string>
    <string name="twitter">twitter</string>
    <string name="github">github</string>
    <string name="event_name">Mobilization</string>
    <string name="event_version">VI</string>
    <string name="map">Map</string>
    <string name="more">More</string>
    <string name="share">Share</string>
    <string name="text_speakers_layout">Speakers</string>
    <!--snackbar-->
    <string name="text_offline">You are offline:(</string>
    <string name="text_up_to_date">You are up to date:)</string>
    <string name="text_agenda_updated">Agenda has been updated</string>
    <!--play services-->
    <string name="play_services_missing">Google Play Services are missing - this devices is not supported</string>
    <string name="play_services_recovery_canceled">Google Play Services are outdated - restart application</string>
    <!--updating agenda-->
    <string name="text_new_agenda">Updating agenda</string>
    <string name="text_downloading_agenda">Downloading new agenda data</string>
</resources>
