<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_my_agenda"
            android:checked="false"
            android:icon="@drawable/ic_nav_my_agenda"
            android:title="@string/navigation_my_agenda" />

        <item
            android:id="@+id/nav_venues"
            android:checked="false"
            android:icon="@drawable/ic_nav_agenda"
            android:title="@string/navigation_venues" />

        <item
            android:id="@+id/nav_speakers"
            android:checked="false"
            android:icon="@drawable/ic_nav_speakers"
            android:title="@string/navigation_speakers" />

        <item
            android:id="@+id/nav_sponsors"
            android:checked="false"
            android:icon="@drawable/ic_nav_sponsors"
            android:title="@string/navigation_sponsors" />


        <item
            android:id="@+id/nav_about"
            android:checked="false"
            android:icon="@drawable/ic_nav_about"
            android:title="@string/navigation_about" />

    </group>
</menu>