<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:background="@android:color/white"
      app:bbn_itemColorActive="@color/primary">
    <item
        android:id="@+id/bbn_item1"
        android:icon="@drawable/ic_nav_about"
        android:title="@string/navigation_my_agenda"/>
    <item
        android:id="@+id/bbn_item2"
        android:icon="@drawable/ic_nav_sponsors"
        android:title="@string/navigation_venues"/>
    <item
        android:id="@+id/bbn_item3"
        android:icon="@drawable/ic_nav_speakers"
        android:title="@string/navigation_speakers"/>
    <!--<item-->
        <!--android:id="@+id/action4"-->
        <!--android:icon="@drawable/ic_nav_agenda"-->
        <!--android:title="@string/navigation_more"/>-->
</menu>