<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/text_app_name"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_icon"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"/>

        <LinearLayout
            android:id="@+id/version_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_app_name"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_version_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_version_label"/>

            <TextView
                android:id="@+id/text_version"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:id="@+id/text_author_label"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/version_layout"
            android:layout_centerHorizontal="true"
            android:text="@string/about_author_label"/>

        <TextView
            android:id="@+id/text_author_name"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_author_label"
            android:layout_centerHorizontal="true"
            android:text="@string/about_author_name"/>

        <Button
            android:id="@+id/button_website"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            style="@style/LightButton"
            android:layout_below="@id/text_author_name"
            android:drawableLeft="@drawable/ic_github"
            android:text="lecho"/>
    </RelativeLayout>

</ScrollView>
